Test packaging of app

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Vävdator</title>
     <link rel="stylesheet" href="./src/main.css" />
   </head>
   <body>
